base/welcome-php-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: welcome-php
  name: welcome-php
  namespace: welcome
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: welcome-php
    weight: null
